DBC22-4986: Fixed z-index of my location button

--- a/src/frontend/src/Components/map/Map.scss
+++ b/src/frontend/src/Components/map/Map.scss
@@ -253,7 +253,7 @@
       position: absolute;
       width: 100%;
       bottom: 0;
-      z-index: 5000;
+      z-index: 1;
     }
 
     .map-btn {
